fixed image URL

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>ScreenBug - The "bug on screen" gif replacement</title>
 
-<script src="screenbug-min.js"></script>
-<script src="screenbug-min.js"></script>
+<script src="https://screen-bug.googlecode.com/git/screenbug-min.js"></script>
+<script src="https://screen-bug.googlecode.com/git/screenbug-min.js"></script>
 
 <style>
 .oldbug {color:red;font:bold 20px sans-serif;}
@@ -36,7 +36,7 @@
   You should find two bug specimens crawling (or lurking) somewhere on your screen. They're fruit flies! :D <p/>
   How to use? <p/>
   Just copy the snippet below and put it in your webpage's HTML source (either in <code>&lt;head&gt;</code> or somewhere in the <code>&lt;body&gt;</code>).
-  <code class="snippet">&lt;script src="http://screenbug.googlecode.com/svn/etc/screenbug-min.js"&gt;&lt;/script&gt;</code>
+  <code class="snippet">&lt;script src="https://screen-bug.googlecode.com/git/screenbug-min.js"&gt;&lt;/script&gt;</code>
 
   That's it. Enjoy your crawling fella tricking your visitors. <p/>
   Link back and relax. <p/>
