--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 .oldbug {color:red;font:bold 20px sans-serif;}
 .oldbug img {border:5px dashed red;vertical-align:middle;}
 .browsers {font:bold 15px sans-serif;color:skyblue;}
-.snippet {display:block;border:3px dashed orange;background:gold;padding:10px;margin:10px 20px;font:bold 16px sans-serif;}
+.snippet {display:block;border:3px dashed orange;background:gold;padding:10px;margin:10px 20px;font:bold 16px sans-serif;color:maroon;}
 </style>
 
 </head>
@@ -40,9 +40,11 @@
 
   That's it. Enjoy your crawling fella tricking your visitors. <p/>
   Link back and relax. <p/>
-  Here's the <a href="">readable source</a> if you're interested. <p/>
+  Here's the <a href="https://screen-bug.googlecode.com/git/screenbug.js">readable source</a> if you're interested. <p/>
   Released under WTFPL license. <p/>
-  k, bye
+  k, bye <p/>
+  
+  <small><small>Dedicated to my sweetheart - Monika McCollister Pirc! I love you! <code>* &lt;3</code></small></small>
   
 </body>
 </html>
