--- a/index.html
+++ b/index.html
@@ -14,15 +14,37 @@
 .snippet {display:block;border:3px dashed orange;background:gold;padding:10px;margin:10px 20px;font:bold 16px sans-serif;color:maroon;}
 </style>
 
+<script type="text/javascript">
+var _gaq = _gaq||[];
+_gaq.push(['_setAccount', 'UA-26875564-1']);
+_gaq.push(['_trackPageview']);
+(function(){
+var ga=document.createElement('script');
+ga.type='text/javascript';
+ga.async=true;
+ga.src='http://www.google-analytics.com/ga.js';
+var s=document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(ga,s);
+})();
+(function() {
+var po=document.createElement('script');
+po.type='text/javascript';
+po.async=true;
+po.src='https://apis.google.com/js/plusone.js';
+var s=document.getElementsByTagName('script')[0];
+s.parentNode.insertBefore(po,s);
+})();
+</script>
+
 </head>
 
 <body>
   
   <h1>ScreenBug - The "bug on screen" gif replacement</h1>
-  <b>Now with JavaScript &amp; CSS3!</b> <p/>
+  <b>Now in JavaScript &amp; CSS3!</b> <p/>
 
   Hey there! <p/>
-  You know the "ancient" animated bug on screen gif? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="oldbug">THIS ONE →<img src="crawling_bug.gif"/></span> <p/>
+  You know the "ancient" animated bug on screen gif prank? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="oldbug">THIS ONE →<img src="crawling_bug.gif"/></span> <p/>
   Well, it's got company: <p/>
   Let me proudly present the alternative <b>crawling screen bug 2.0</b>: it uses JavaScript &amp; CSS3 so it works on most modern browsers:
   <ul class="browsers">
@@ -33,16 +55,28 @@
     <li>Internet Explorer 9+</li>
   </ul>
   <p/>
-  You should find two bug specimens crawling (or lurking) somewhere on your screen. They're fruit flies! :D <p/>
+  You should find two bug specimens randomly crawling (or lurking) somewhere on your screen. They're fruit flies! :D <p/>
   How to use? <p/>
   Just copy the snippet below and put it in your webpage's HTML source (either in <code>&lt;head&gt;</code> or somewhere in the <code>&lt;body&gt;</code>).
   <code class="snippet">&lt;script src="https://screen-bug.googlecode.com/git/screenbug-min.js"&gt;&lt;/script&gt;</code>
 
   That's it. Enjoy your crawling fella tricking your visitors. <p/>
-  Link back and relax. <p/>
   Here's the <a href="https://screen-bug.googlecode.com/git/screenbug.js">readable source</a> if you're interested. <p/>
+  Please contact me for any bugs/missing features you encounter, TYVM. <p/>
   Released under WTFPL license. <p/>
-  k, bye <p/>
+  Link back and relax. <p/>
+  k, bye <p/><p/>
+  
+<g:plusone annotation="inline"></g:plusone>
+<div class="fb-like" data-send="false" data-width="450" data-show-faces="true" data-font="verdana"></div>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0];
+if (d.getElementById(id)) {return;}
+js = d.createElement(s); js.id = id;
+js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=213650408675997";
+fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
   
   <small><small>Dedicated to my sweetheart - Monika McCollister Pirc! I love you! <code>* &lt;3</code></small></small>
   
