Changed link to readable source form git-raw to code-hosted.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ s.parentNode.insertBefore(po,s);
   <code class="snippet">&lt;script src="https://screen-bug.googlecode.com/git/screenbug-min.js"&gt;&lt;/script&gt;</code>
 
   That's it. Enjoy your crawling fella tricking your visitors. <p/>
-  Here's the <a href="https://screen-bug.googlecode.com/git/screenbug.js">readable source</a> if you're interested. <p/>
+  Here's the <a href="http://code.google.com/p/screen-bug/source/browse/screenbug.js">readable source</a> if you're interested. <p/>
   Please contact me for any bugs/missing features you encounter, TYVM. <p/>
   Released under WTFPL license. <p/>
   Link back and relax. <p/>
