--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>ScreenBug - The "bug on screen" gif replacement</title>
 
-<script src="https://screen-bug.googlecode.com/git/screenbug-min.js"></script>
-<script src="https://screen-bug.googlecode.com/git/screenbug-min.js"></script>
+<script src="screenbug-min.js"></script>
+<script src="screenbug-min.js"></script>
 
 <style>
 .oldbug {color:red;font:bold 20px sans-serif;}
@@ -14,7 +14,7 @@
 .snippet {display:block;border:3px dashed orange;background:gold;padding:10px;margin:10px 20px;font:bold 16px sans-serif;color:maroon;}
 </style>
 
-<script type="text/javascript">
+<!--script type="text/javascript">
 var _gaq = _gaq||[];
 _gaq.push(['_setAccount', 'UA-26875564-1']);
 _gaq.push(['_trackPageview']);
@@ -34,7 +34,7 @@ po.src='https://apis.google.com/js/plusone.js';
 var s=document.getElementsByTagName('script')[0];
 s.parentNode.insertBefore(po,s);
 })();
-</script>
+</script-->
 
 </head>
 
@@ -44,11 +44,11 @@ s.parentNode.insertBefore(po,s);
   <b>Now in JavaScript &amp; CSS3!</b> <p/>
 
   Hey there! <p/>
-  You know the "ancient" animated bug on screen gif prank? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="oldbug">THIS ONE →<img src="crawling_bug.gif"/></span> <p/>
+  You know the "ancient" (1990's) animated bug on screen gif prank? &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="oldbug">THIS ONE →<img src="crawling_bug.gif"/></span> <p/>
   Well, it's got company: <p/>
   Let me proudly present the alternative <b>crawling screen bug 2.0</b>: it uses JavaScript &amp; CSS3 so it works on most modern browsers:
   <ul class="browsers">
-    <li>Firefox 3.5+</li>
+    <li>Firefox 3.5+ <span style="color:orange">(seems to be broken on Firefox17+ ATM)</span></li>
     <li>Chrome 9+</li>
     <li>Opera 10.5+</li>
     <li>Safari 3.5+</li>
@@ -57,7 +57,7 @@ s.parentNode.insertBefore(po,s);
   <p/>
   You should find two bug specimens randomly crawling (or lurking) somewhere on your screen. They're fruit flies! :D <p/>
   How to use? <p/>
-  Just copy the snippet below and put it in your webpage's HTML source (either in <code>&lt;head&gt;</code> or somewhere in the <code>&lt;body&gt;</code>).
+  Just copy the snippet below and put it in your webpage's HTML source (either in <code>&lt;head&gt;</code> or somewhere in the <code>&lt;body&gt;</code>). Repeat for more bugs.
   <code class="snippet">&lt;script src="https://screen-bug.googlecode.com/git/screenbug-min.js"&gt;&lt;/script&gt;</code>
 
   That's it. Enjoy your crawling fella tricking your visitors. <p/>
