Update info: Only doesn't work on firefox17+ on Linux.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ s.parentNode.insertBefore(po,s);
   Well, it's got company: <p/>
   Let me proudly present the alternative <b>crawling screen bug 2.0</b>: it uses JavaScript &amp; CSS3 so it works on most modern browsers:
   <ul class="browsers">
-    <li>Firefox 3.5+ <span style="color:orange">(seems to be broken on Firefox17+ ATM)</span></li>
+    <li>Firefox 3.5+ <span style="color:orange">(ATM seems to be broken on Firefox17+ on GNU/Linux)</span></li>
     <li>Chrome 9+</li>
     <li>Opera 10.5+</li>
     <li>Safari 3.5+</li>
